<resources>
    <string name="app_name">ToWatch</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="catchphrase">Your to-do list for movies and shows</string>

    <string name="title_activity_dashboard2">Dashboard2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="fab_add_content_description">Button to add movies.</string>
    <string name="movie_title_hint">Movie title...</string>
    <string name="search">Search</string>
    <string name="have_you_seen_this_movie">Have you seen this movie?</string>
    <string name="add_movie">Add movie</string>
    <string name="General_error_message">Oops! Something has gone wrong!</string>
    <string name="delete_movie">Delete movie</string>
    <string name="movie_poster_description">Movie poster image</string>
</resources>