<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:backgroundTint="?attr/colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="94dp"
        android:layout_height="94dp"
        app:cardCornerRadius="500dp"
        android:elevation="12dp"
        android:backgroundTint="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="45dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/nav_header_desc"
                android:src="@mipmap/ic_launcher_round"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:backgroundTint="@color/none"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/none"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>