<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signin.SignInActivity"
    android:background="?attr/backgroundColor"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:background="@drawable/strike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catchphrase"
            android:paddingVertical="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_background"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in_with_google"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>