<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addNewMovie.AddMovieFragment"
    android:background="?attr/backgroundColor"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        android:layout_marginEnd="10dp"
        android:hint="@string/movie_title_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/til_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintBottom_toTopOf="@id/cb_seen"
        tools:listitem="@layout/movie_rv_list_item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/cb_seen"
        app:layout_constraintBottom_toBottomOf="@id/cb_seen"
        app:layout_constraintEnd_toStartOf="@id/cb_seen"
        android:singleLine="false"
        android:textSize="20sp"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:text="@string/have_you_seen_this_movie"
        android:layout_gravity="center"/>

    <CheckBox
        android:id="@+id/cb_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_add_movie"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_add_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="30dp"
        android:text="@string/add_movie"/>

    <LinearLayout
        android:clickable="true"
        android:id="@+id/ll_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/rv_movies"
        app:layout_constraintBottom_toBottomOf="@id/rv_movies"
        app:layout_constraintStart_toStartOf="@id/rv_movies"
        app:layout_constraintEnd_toEndOf="@id/rv_movies"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:focusable="true">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:elevation="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:id="@+id/ll_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/rv_movies"
        app:layout_constraintBottom_toBottomOf="@id/rv_movies"
        app:layout_constraintStart_toStartOf="@id/rv_movies"
        app:layout_constraintEnd_toEndOf="@id/rv_movies"
        android:background="@color/fifth"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/General_error_message"
            android:textSize="18sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>